# kraken

./: .gitignore  CMakeLists.txt  get_kraken_token.py
include/: consumer.h  feed.h  logger.h  order_book.h
src/: feed.cpp  main.cpp  order_book.cpp
ui/: README.md  index.html  tailwind.config.ts
ui/src/: index.css
ui/src/components/: OrderbookDisplay.tsx  OrderbookRow.tsx  SymbolSelector.tsx
ui/src/pages/: Index.tsx
